# CSC-4402

./: .gitignore  README.md  cli.py  db.py  gen_data.py  pyproject.toml  utils.py
test_scripts/: test_cli.py
